# Inulases

./: README.md  Untitled-1.txt  package-lock.json  package.json  pnpm-lock.yaml
src/UI/: package-lock.json  package.json
src/UI/public/: en-US.json  errorcodestable.json  zh-CN.json
src/UI/src/: global.css
src/UI/src-tauri/: Cargo.toml  tauri.conf.json
src/UI/src-tauri/capabilities/: migrated.json
src/UI/src-tauri/src/: main.rs
src/UI/src/pages/Home/: home.css  home.tsx
src/kernel/: config.json  configInside.json
